Fix width btn and overflow

--- a/app/assets/styles/components/_buttons.scss
+++ b/app/assets/styles/components/_buttons.scss
@@ -8,7 +8,7 @@
     transition: color 0.5s, background-color 0.5s, transform 0.5s;
     font-size: calc(0.9 * $font-size-text);
     padding: 0.5rem 1rem;
-    width: 14rem;
+    width: 15rem;
 
     @include respond-to('breakpoint-992') {
         font-size: $font-size-text;
